Moved #dob and #have_real_account to. Changed checkbox in #have_real_account to radio buttons with yes and no option. Make sure DOB hides if no is selected. Added style to #have_real_account so that the radio buttons is correctly aligned. Changed text label in #have_real_account.

--- a/src/sass/static/pages.scss
+++ b/src/sass/static/pages.scss
@@ -1480,3 +1480,17 @@ body #not_authenticated_financial ul.checked > li {
         color: $COLOR_BLUE;
     }
 }
+
+#have_real_account {
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+    div {
+        margin-right: 10px;
+    }
+
+    @media screen and (max-width: 480px) {
+        justify-content: center;
+    }
+}
